fix: source code should wrap

--- a/src/client/theme-default/builtins/SourceCode/index.less
+++ b/src/client/theme-default/builtins/SourceCode/index.less
@@ -32,6 +32,9 @@
     line-height: 1.58;
     direction: ltr;
     background: transparent;
+    white-space: pre-wrap;
+    word-break: keep-all;
+    overflow-wrap: break-word;
 
     // remove shadow from coy theme
     &::before,
